Rewrote Navigate method for player and menu selection

--- a/KalderasEscape/KalderasEscape.csproj
+++ b/KalderasEscape/KalderasEscape.csproj
@@ -11,4 +11,8 @@
     <Folder Include="GameClasses\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Sharprompt" Version="2.4.5" />
+  </ItemGroup>
+
 </Project>
