player now dies if exiting ship without space suit

--- a/KalderasEscape/KalderasEscape.csproj
+++ b/KalderasEscape/KalderasEscape.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Sharprompt" Version="2.4.5" />
+    <PackageReference Include="Spectre.Console" Version="0.45.0" />
   </ItemGroup>
 
 </Project>
